# ai_dictionary

./: README.md  postgres.yml
backend/: alembic.ini  config.py  main.py  pyproject.toml
backend/app/: auth.py  models.py  schemas.py
backend/app/db/: session.py
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 9556e33c769c_init_tables.py
backend/app/routers/: auth.py  system.py
